# rwa-compliance-middleware

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/audit/: Cargo.toml
contracts/audit/src/: lib.rs
contracts/audit/test_snapshots/test/: test_append_only_no_deletes.1.json  test_empty_query_returns_empty.1.json  test_export_report.1.json  test_log_event.1.json  test_log_multiple_events_sequential_ids.1.json  test_multiple_assets_separate_events.1.json  test_non_gateway_cannot_log.1.json  (+1 more)
contracts/credentials/: Cargo.toml
contracts/credentials/src/: lib.rs
contracts/enforcement/: Cargo.toml
contracts/enforcement/src/: lib.rs
contracts/gateway/: Cargo.toml
contracts/gateway/src/: lib.rs
contracts/gateway/test_snapshots/test/: test_approve_audit_event_logged.1.json  test_approve_happy_path.1.json  test_approve_kyc_expired_triggers_lock.1.json  test_approve_rejected_no_kyc.1.json  test_approve_sanctioned_jurisdiction.1.json  test_approve_unknown_asset_panics.1.json  test_approve_with_whitelist_requirement.1.json  test_deregister_asset.1.json  test_full_lifecycle_integration.1.json  test_non_issuer_cannot_deregister.1.json  test_register_asset.1.json
contracts/geo/: Cargo.toml
contracts/geo/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/jurisdiction/: Cargo.toml
contracts/jurisdiction/src/: lib.rs
contracts/kyc_oracle/: Cargo.toml
contracts/kyc_oracle/src/: lib.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs
(+56 files in other folders)
